@@ -91,6 +91,8 @@ shutter (0.80~ppa2) karmic; urgency=low
        [Save settings to file when closing preferences dialog]
     -- LP: #386304
        [Rename Edit -> Quick select to Quick profile select]
+    -- LP: #386316
+       ['Delete objects' and 'Delete all objects' are too similar]
     -- LP: #386769
        [quick profile selector is even sensitive when empty]
   * code cleanup
